force-app/main/default/objects/Timer__c/Timer__c.object-meta.xml
<CustomObject>
    <label>Timer</label>
    <nameField>
        <label>Número da linha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>