force-app/main/default/objects/Timer__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>OrderId</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Timers</relationshipLabel>
    <relationshipName>Timers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>