force-app/main/default/objects/Timer__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data Início</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>