force-app/main/default/objects/Timer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
                <default>true</default>
                <label>Aberto</label>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Suspenso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>